# bookkeeping

./: CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  nginx.conf
backend/: .gitignore  database.py  main.py  pyproject.toml
backend/cli/: init_db.py
backend/models/: __init__.py  metric.py  transaction.py
backend/routers/: metrics.py  transactions.py
frontend/: .gitignore  index.html  package.json  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/apis/: index.ts  metrics.ts  transactions.ts
frontend/src/components/charts/: ProfitLineChart.vue  ProfitPieChart.vue
frontend/src/components/layouts/: AppNavbar.vue  AppTabbar.vue
frontend/src/models/: metric.d.ts  transaction.d.ts
frontend/src/router/: index.ts
frontend/src/utils/: date.ts
frontend/src/views/: HomeView.vue  RecordView.vue
frontend/src/views/MetricView/: index.vue
frontend/src/views/RecordView/: DayRecordForm.vue  MyDatePicker.vue  index.vue
